--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "lambda-streams",
-    "scripts": {        
-      },
+    "scripts": {},
     "devDependencies": {
+        "@types/mime": "^2.0.3",
         "@types/node": "^10.0.0",
         "@typescript-eslint/eslint-plugin": "^4.15.2",
         "@typescript-eslint/parser": "^4.15.2",
@@ -16,7 +16,8 @@
         "@pulumi/aws": "^3.25.1",
         "@pulumi/awsx": "^0.24.0",
         "@pulumi/pulumi": "^2.0.0",
-        "@pulumi/random": "^3.0.3"
+        "@pulumi/random": "^3.0.3",
+        "mime": "^2.5.2"
     },
     "private": "true"
 }
